iframeTone2.html new

--- a/iframeTone.html
+++ b/iframeTone.html
@@ -21,6 +21,11 @@
         font-size: 8rem;
         background-color: rgba(16, 139, 51, 0.5);
     }
+
+    h1 {
+        font-size: 8rem;
+        background-color: rgba(179, 36, 127, 0.5);
+    }
 </style>
 
 <div class="ProducerE87_Tag">
@@ -40,10 +45,3 @@
 </html>
 
 
-<!DOCTYPE html>
-<html lang="es">
-<head>
-
-</head>
-
-</html>
